styles/Home.module.scss
/* ... */
.project-tile-button {
    opacity: 0;
    padding: 0 !important;

    a {
        width: 100%;
        height: 100%;
        padding: 12px 18px;
    }
}
.project-tile-links {
    display: flex;
    align-items: center;
    gap: 15px;

    svg {
        display: block;
        height: 100%;
        width: 100%;
    }
}
.project-tile-link {
    opacity: 0;
    padding: 5px;
    margin-right: -5px;
    border-radius: 4px;
    width: 34px;
    height: 34px;
}
.project-tile-image {
    height: 280px;
    aspect-ratio: 5/3;
    position: relative;
    border-radius: var(--border-radius-primary);
    overflow: hidden;
    
    .project-tile-image-container {
        opacity: 0;
        width: 100%;
        height: 100%;
        position: relative;
    }

    &::after {
        content: '';
        position: absolute;
        left: 0;
        top: 0;
        height: 100%;
        width: 0;
        background-color: var(--color-primary);
    }
}

.technologies {
    background-color: var(--background-secondary);
    overflow: hidden;
    padding-top: 150px;

    &.hidden {
        .technology-podium {
            animation: none !important;
        }
    }
}
.technology-podiums {
    --height: 330px;
    --row-amount: 5;
    width: var(--width-main);
    max-width: var(--width-main-max);
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(var(--row-amount), 1fr);
    align-items: flex-end;
}
.technology-podium {
    height: var(--height);
    margin: 0 -10px;
    color: var(--text-light-primary);
    z-index: 2;
    animation: show-podium 1s forwards;
    opacity: 0;

    &:last-of-type, &:first-of-type {
        height: calc(var(--height) - 60px);
        z-index: 1;
    }
    &.main {
        height: calc(var(--height) + 60px);
        z-index: 3;
    }
}
.technology-podium-content {
    --border-radius: 24px;
    border-radius: var(--border-radius) var(--border-radius) 0 0;
    background-color: var(--color-primary);
    height: 100%;
    padding: 30px;
    box-shadow: rgb(0 0 0 / 30%) 0px 1px 4px 0px;
}
.technology-title {
    font-size: 34px;
    color: var(--text-primary);
    font-weight: 700;
    text-align: center;
    margin-bottom: 16px;
}
.technology-extras {
    text-align: center;
    display: flex;
    flex-direction: column;
    gap: 5px;
    font-weight: 600;
    color: var(--text-light-secondary);
    margin-top: 16px;
    font-size: 14px;
}
@keyframes show-podium {
    from {
        transform: translateY(100%);
    }
    to {
        transform: translateY(0);
        opacity: 1;
    }
}

.footer {
    padding: 80px;
    background-color: var(--color-primary);
    border-top: 1px solid var(--color-secondary);
    position: relative;
    color: var(--text-light-primary);
    font-size: 40px;
    font-weight: 700;
    display: flex;
    flex-direction: column;
    align-items: center;

    &::after, &:before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
    }
    &::after {
        background-color: var(--color-tertiary);
    }
    &:before {
        background-color: var(--color-primary);
        z-index: 1;
    }
    &:not(.hidden)::after, &:not(.hidden):before {
        animation: show-footer 1s forwards;
    }
    &:not(.hidden)::after {
        animation-delay: .7s;
    }
}
@keyframes show-footer {
    from {
        height: 100%;
        top: 0;
    }
    to {
        height: 0;
        top: 100%;
    }
}
.footer-button {
    margin-top: 30px;
    padding: 0 !important;

    a {
        padding: 17px 40px;
        font-size: 14px;
    }
}

@media (max-width: 1000px) {
    .header {
        h1 {
            font-size: 38px;
        }
        h2 {
            font-size: 29px;
        }
        p {
            font-size: 18px;
        }
    }
    .header-content {
        padding-top: 170px;
    }
}
@media (max-width: 900px) {
    .project-cards {
        --row-amount: 2;
    }
    .technology-podiums {
        --row-amount: 2;
        gap: 20px;
    }
    .technology-podium {
        margin: 0;
        height: unset !important;
        animation-delay: unset !important;
    }
    .technology-podium-content {
        border-radius: var(--border-radius);
    }
}
@media (max-width: 800px) {
    .technology-podiums {
        flex-direction: column;
    }
    .technology-podium {
        margin: 0;
        width: 100%;
        text-align: center;
    }
}
@media (max-width: 700px) {
    .about-header, .projects-header {
        font-size: 40px;
    }
    .header-content {
        flex-direction: column;
    }
    .header-animation {
        margin: 0 auto;
        margin-top: 80px;
        margin-bottom: 120px;
        width: 350px;
    }
    .animation-interface {
        width: 350px;
    }
    .animation-progress {
        width: 140px;
        height: 100px;
        font-size: 12px;

        span {
            font-size: 24px;
        }
    }
    .animation-icon {
        right: -35px;
        top: -60px;
        svg {
            width: 70px;
        }
    }
    .about-container {
        margin-bottom: 120px;
        padding-top: 40px;
    }
    .about-content {
        flex-direction: column;
    }
    .about-tabs {
        display: flex;
        margin-bottom: 10px;
    }
    .about-card {
        margin-left: 0;
    }
    .projects-container {
        padding-top: 50px;
        margin-bottom: 150px;
    }
    .project-tiles-container {
        gap: 120px;
    }
    .project-tile {
        flex-direction: column;
        gap: 0;
    }
    .project-tile-main {
        order: 0 !important;
    }
    .project-tile-image {
        width: 100%;
        height: unset;
    }
}
/* ... */

